@@ -102,6 +102,7 @@ following names for their contribution to the product.
 * Simon Walker
 * Stefano Codari
 * Str4nd
+* svip
 
 == Translators ==
 * Anders Wegge Jakobsen
